--- a/bugtracker/templates/home.html
+++ b/bugtracker/templates/home.html
@@ -8,7 +8,34 @@
     <h1>Welcome to the Bug Tracker!</h1>
     
     <h2>All Tickets:</h2>
-    
+    <ul>
+        {% for ticket in tickets %}
+            <li>
+                <a href="{% url 'ticket' ticket.id %}">
+                    {{ ticket }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <br>
+    <p>You are currently logged in: {{user.is_authenticated}}</p>
+    <br>
+    <a href="{% url 'add_ticket' %}">
+        Add New Ticket
+    </a>
+    <br>
+    <a href="{% url 'add_user' %}">
+        Setup New User
+    </a>
+    <br>
+    <a href="{% url 'login' %}">
+        Login
+     </a>
+    <br>
+    <a href="{% url 'logout' %}">
+        Logout
+     </a>
      
 
 {% endblock %}
