--- a/bugtracker/templates/home.html
+++ b/bugtracker/templates/home.html
@@ -7,9 +7,31 @@
 
     <h1>Welcome to the Bug Tracker!</h1>
     
-    <h2>All Tickets:</h2>
+    <h3>New Tickets:</h3>
     <ul>
-        {% for ticket in tickets %}
+        {% for ticket in n_tickets %}
+            <li>
+                <a href="{% url 'ticket' ticket.id %}">
+                    {{ ticket }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <h3>In-Progress Tickets:</h3>
+    <ul>
+        {% for ticket in ip_tickets %}
+            <li>
+                <a href="{% url 'ticket' ticket.id %}">
+                    {{ ticket }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
+    <h3>Completed:</h3>
+    <ul>
+        {% for ticket in d_tickets %}
             <li>
                 <a href="{% url 'ticket' ticket.id %}">
                     {{ ticket }}
@@ -27,6 +49,10 @@
     <br>
     <a href="{% url 'add_user' %}">
         Setup New User
+    </a>
+    <br>
+    <a href="{% url 'user' user.id %}">
+        My Profile
     </a>
     <br>
     <a href="{% url 'login' %}">
