--- a/bugtracker/templates/home.html
+++ b/bugtracker/templates/home.html
@@ -40,6 +40,17 @@
         {% endfor %}
     </ul>
 
+    <h3>Invalid Tickets:</h3>
+    <ul>
+        {% for ticket in na_tickets %}
+            <li>
+                <a href="{% url 'ticket' ticket.id %}">
+                    {{ ticket }}
+                </a>
+            </li>
+        {% endfor %}
+    </ul>
+
     <br>
     <p>You are currently logged in: {{user.is_authenticated}}</p>
     <br>
